корректируем с учетом переименования каталогов
--HG--
extra : convert_revision : svn%3A3088d786-d643-db11-b331-00a0c9b636be/sandbox/seva/robopanda%408268

--- a/data/test.cfg
+++ b/data/test.cfg
@@ -1,6 +1,6 @@
 index 0x1000
-audio 202 dump/00202.aud
-audio 203 dump/00712.aud
+audio 202 dump_cartridge_black/00202.aud
+audio 203 dump_cartridge_black/00712.aud
 
 #start 23
 
