--- a/data/test.cfg
+++ b/data/test.cfg
@@ -1,9 +1,33 @@
 index 0x1000
 cx_offset 0xC
-audio 202 dump_cartridge_black/00202.aud
-audio 203 dump_cartridge_black/00712.aud
+audio 1 dump_cartridge_black/00669.aud
+audio 2 dump_cartridge_black/00757.aud
+audio 3 dump_cartridge_black/00837.aud
+audio 4 dump_cartridge_black/00791.aud
+audio 5 dump_cartridge_black/00792.aud
 
 # setup initial state
+code 0004      # 0025: push #12
+code 291A      # 0025: push #12
+code 0001      # 0025: push #12
+code 2928      # 0025: push #12
+code 2923      # 0025: push #12
+code 0002      # 0025: push #12
+code 2928      # 0025: push #12
+code 2923      # 0025: push #12
+code 0003      # 0025: push #12
+code 2928      # 0025: push #12
+code 2923      # 0025: push #12
+code 0004      # 0025: push #12
+code 2928      # 0025: push #12
+code 2923      # 0025: push #12
+code 0005      # 0025: push #12
+code 2928      # 0025: push #12
+code 2923      # 0025: push #12
+code 0000      # 0062: push #0
+code 297E      # 0063: pop @40
+code E7FE      # 0064: jump .-2
+
 code 0012      # 0025: push #12
 code 0023      # 0021: push #23
 code 0034      # 0022: push #34
