FFT'шный анализатор вавов
--HG--
extra : convert_revision : svn%3A3088d786-d643-db11-b331-00a0c9b636be/sandbox/seva/robopanda%408374

--- a/data/test.cfg
+++ b/data/test.cfg
@@ -5,23 +5,13 @@ audio 2 dump_cartridge_black/00757.aud
 audio 3 dump_cartridge_black/00837.aud
 audio 4 dump_cartridge_black/00791.aud
 audio 5 dump_cartridge_black/00792.aud
+audio 6 dump_cartridge_black/00710.aud
+audio 7 sacm/test_bits_for_2band_2.aud
 
 # setup initial state
-code 0004      # 0025: push #12
+code 0009      # 0025: push #12
 code 291A      # 0025: push #12
-code 0001      # 0025: push #12
-code 2928      # 0025: push #12
-code 2923      # 0025: push #12
-code 0002      # 0025: push #12
-code 2928      # 0025: push #12
-code 2923      # 0025: push #12
-code 0003      # 0025: push #12
-code 2928      # 0025: push #12
-code 2923      # 0025: push #12
-code 0004      # 0025: push #12
-code 2928      # 0025: push #12
-code 2923      # 0025: push #12
-code 0005      # 0025: push #12
+code 0007      # 0025: push #12
 code 2928      # 0025: push #12
 code 2923      # 0025: push #12
 code 0000      # 0062: push #0
