первая как-то работающая версия енкодера :))
--HG--
extra : convert_revision : svn%3A3088d786-d643-db11-b331-00a0c9b636be/sandbox/seva/robopanda%408378

--- a/data/test.cfg
+++ b/data/test.cfg
@@ -6,7 +6,7 @@ audio 3 dump_cartridge_black/00837.aud
 audio 4 dump_cartridge_black/00791.aud
 audio 5 dump_cartridge_black/00792.aud
 audio 6 dump_cartridge_black/00710.aud
-audio 7 sacm/test_bits_for_3band.aud
+audio 7 sacm/test_encode.aud
 
 # setup initial state
 code 0009      # 0025: push #12
