переделан и автоматизирован fft.py
--HG--
extra : convert_revision : svn%3A3088d786-d643-db11-b331-00a0c9b636be/sandbox/seva/robopanda%408494

--- a/data/test.cfg
+++ b/data/test.cfg
@@ -6,7 +6,7 @@ cx_offset 0xC
 #audio 4 dump_cartridge_black/00791.aud
 #audio 5 dump_cartridge_black/00792.aud
 #audio 6 dump_cartridge_black/00710.aud
-audio 1 sacm/test_00837_slow.aud
+audio 1 sacm/test_bits_for_band1_ms.aud
 
 # setup initial state
 code 0008      # 0025: push #12
