--- a/data/test_mover.cfg
+++ b/data/test_mover.cfg
@@ -1,50 +1,7 @@
-index 0x1000
 cx_offset 0xC
-#audio 1 a.aud
-audio 1 dump_cartridge_black/00026.aud
-audio 2 dump_cartridge_black/00017.aud
-
-# mover presets from cartridge, does not work for legs...
-#code 01FF 0043   #  0  push #0011
-#code 2410        #     pop  @10
-#code 01FF 0099   #  1  push #C051
-#code 2411        #     pop  @11
-#code 01FF 005B   #  2  push #0102
-#code 2412        #     pop  @12
-#code 01FF 00A6   #  3  push #0B00
-#code 2413        #     pop  @13
-#code 01FF 0034   #  4  push #..
-#code 2414        #     pop  @14
-#code 01FF 00C4   #  5  push #..
-#code 2415        #     pop  @15
-#code 01FF 002E   #  6  push #..
-#code 2416        #     pop  @16
-#code 01FF 00BC   #  7  push #..
-#code 2417        #     pop  @17
-#code 01FF 0075   #  8  push #..
-#code 2418        #     pop  @18
-#code 01FF 00A3   #  9  push #..
-#code 2419        #     pop  @19
-#code 01FF 0075   # 10  push #..
-#code 241A        #     pop  @1A
-#code 01FF 00A3   # 11  push #..
-#code 241B        #     pop  @1B
-#code 01FF 0060   # 12  push #..
-#code 241C        #     pop  @1C
-#code 01FF 0088   # 13  push #..
-#code 241D        #     pop  @1D
-#code 01FF 0060   # 14  push #..
-#code 241E        #     pop  @1E
-#code 01FF 0098   # 15  push #..
-#code 241F        #     pop  @1F
-#code 01FF 0000   # 16  push #..
-#code 2420        #     pop  @20
-#code 01FF 0000   # 17  push #..
-#code 2421        #     pop  @21
-#code 01FF 0000   # 18  push #..
-#code 2422        #     pop  @22
-#code 01FF 0000   # 19  push #..
-#code 2423        #     pop  @23
+audio 1 dump_cartridge_black/00018.aud
+audio 3 dump_cartridge_black/00026.aud
+audio 4 dump_cartridge_black/00017.aud
 
 # ======== mover initialization from nvram presets ===========
 # load data from nvram 00..15 to globals @10..25 (procedure at 05E7 in black carttridge, chunk from 05F5)
@@ -75,16 +32,16 @@ code 0008      #  push #08
 code 291A      #  volume
 
 # play audio 1 ("Yes")
-code 0001      #  push #01
+code 0003      #  push #03
 code 2928      #  play
 code 2923      #  play_wait
 
 #move
-code 0001        #     push #1
+code 0002        #     push #2
 code 292F        #     move
 
 # play audio 2 ("Most likely")
-code 0002      #  push #02
+code 0004      #  push #04
 code 2928      #  play
 code 2923      #  play_wait
 
@@ -93,8 +50,18 @@ code 0000      #  push #0
 code 297E      #  drop
 code E7FE      #  jump .-2
 
+#mover 217A 317A F002 F004 21FA 31FA F002 F004 2177 3177 F002 F004 F000
 #mover 00EA F002 F004 01EA F002 F004 016A F002 F004 F000 # левое плечо вверх-вниз
 #mover 10EA F002 F004 11EA F002 F004 116A F002 F004 F000 # правое плечо вверх-вниз
 #mover 20EA F002 F004 21EA F002 F004 216A F002 F004 F000 # левая задняя лапа
+#mover 30EA F002 F004 31EA F002 F004 316A F002 F004 F000 # правая задняя лапа
+#mover 40EA F002 F004 41EA F002 F004 416A F002 F004 F000 # левое плечо вперед-назад
+#mover 50EA F002 F004 51EA F002 F004 516A F002 F004 F000 # правое плечо вперед-назад
+#mover 60EA F002 F004 61EA F002 F004 616A F002 F004 F000 # голова вперед-назад
 #mover 70CA F002 F004 714A F002 F004 790A F002 F004 F000 # голова лево-право
+
+mover_entry 1
 mover 610a 710a 08aa 18aa 287a 387a f002 f004 f005 000a 407a 507a f005 00b4 f00a # proper sitting initial state
+
+mover_entry 2
+mover 207F 307F F002 F004 297A 397A F002 F004 207A 307A F002 F004 400A 500A F002 F004 407A 507A F002 F004 F000
