скрипт для тестирования коммандочек с использованием возможности онлайновой трассировки
--HG--
extra : convert_revision : svn%3A3088d786-d643-db11-b331-00a0c9b636be/sandbox/seva/robopanda%408611

--- a/data/test.cfg
+++ b/data/test.cfg
@@ -1,24 +1,6 @@
-index 0x1000
 cx_offset 0xC
-#audio 1 dump_cartridge_black/00669.aud
-#audio 2 dump_cartridge_black/00757.aud
-#audio 3 dump_cartridge_black/00837.aud
-#audio 4 dump_cartridge_black/00791.aud
-#audio 5 dump_cartridge_black/00792.aud
-#audio 6 dump_cartridge_black/00710.aud
-#audio 1 sacm/test_bits_for_band2_ms.aud
-audio 1 a.aud
 
 # setup initial state
-code 0008      # 0025: push #12
-code 291A      # 0025: push #12
-code 0001      # 0025: push #12
-code 2928      # 0025: push #12
-code 2923      # 0025: push #12
-code 0000      # 0062: push #0
-code 297E      # 0063: pop @40
-code E7FE      # 0064: jump .-2
-
 code 0012      # 0025: push #12
 code 0023      # 0021: push #23
 code 0034      # 0022: push #34
@@ -38,65 +20,94 @@ code 00DE      # 002F: push #DE
 code 2D83      # 0030: pop $3
 
 #code under test
-#code AFC9 0004 2D04 B000 2440 2D1F B000 2440
-code 2EC0      # 0031: unknown 2902
-code B000      # 0038: read_spi 0
-code 297E
-code 2EC0      # 0031: unknown 2902
-code B000      # 0038: read_spi 0
-code 297E
+code A800      # 0: set $0, #0
+           #m2:
+code 950F      # 1: cmp $0, #8
+code F017      # 2: rjump_f0 m1
+code A840      # 3: set $1, #0
+           #m3:
+code 951F      # 4: cmp $1, #8
+code F011      # 5: rjump_f0 m4
+# print $0
+code 2D00      # 6: push $0
+code BF74      # 7: 0038: read_spi 0
+code 297E      # 8: drop
+# print $1
+code 2D01      # 9: push $1
+code BF74      # A: read_spi 0
+code 297E      # B: drop
+#test
+code 2D00      # 6: push $0
+code 2B22      # 7: tested code
+# print stack top
+code BF74      # 8: read_spi 0
+code 297E      # 9: drop
+
+# CCCC marker - "line feed"
+code 01FF 65DA # C: push 5E5A // (5E5A+C)*2+1000 = FFFE
+code B000      # E: read_spi 0
+code 297E      # F: drop
+
+code 2EC1      # 10: inc $1
+code 297E      # 11: drop
+code E7EE      # 12: jump m3
+          # m4:
+code 2EC0      # 13: inc $0
+code 297E      # 14: drop
+code E7E8      # 15: jump m2
+          # m1:  16:
 
 #dump stack
 # AAAA marker
-code 01FF 4D49 # 0036: push #4D49 // (4D49+C)*2+1000 = AAAA
+code 01FF 54C9 # 0036: push #4D49 // (4D49+C)*2+1000 = AAAA
 code B000      # 0038: read_spi 0
+code 297E      # 0044: drop
 # locals dump
 code 2D00      # 0039: push $0
-code B000      # 003A: read_spi 0
-code 2440      # 003B: pop @40
+code BF74      # 0038: read_spi 0
+code 297E      # 003B: drop
 code 2D01      # 003C: push $1
-code B000      # 003D: read_spi 0
-code 2440      # 003E: pop @40
+code BF74      # 0038: read_spi 0
+code 297E      # 003E: drop
 code 2D02      # 003F: push $2
-code B000      # 0040: read_spi 0
-code 2440      # 0041: pop @40
+code BF74      # 0038: read_spi 0
+code 297E      # 0041: drop
 code 2D03      # 0042: push $3
-code B000      # 0043: read_spi 0
-code 2440      # 0044: pop @40
+code BF74      # 0038: read_spi 0
+code 297E      # 0044: drop
 # FFFE marker
-code 01FF 77F3 # 0045: push 77F3 // (77F3+C)*2+1000 = FFFE
+code 01FF 7F73 # 0045: push 77F3 // (77F3+C)*2+1000 = FFFE
 code B000      # 0047: read_spi 0
-code 2440      # 0048: pop @40
+code 297E      # 0048: drop
 # stack dump
-code B000      # 0049: read_spi 0
-code 2440      # 004A: pop @40
-code B000      # 004B: read_spi 0
-code 2440      # 004C: pop @40
-code B000      # 004D: read_spi 0
-code 2440      # 004E: pop @40
-code B000      # 004F: read_spi 0
-code 2440      # 0050: pop @40
-code B000      # 0051: read_spi 0
-code 2440      # 0052: pop @40
-code B000      # 0053: read_spi 0
-code 2440      # 0054: pop @40
-code B000      # 0055: read_spi 0
-code 2440      # 0056: pop @40
-code B000      # 0057: read_spi 0
-code 2440      # 0058: pop @40
-code B000      # 0059: read_spi 0
-code 2440      # 005A: pop @40
-code B000      # 005B: read_spi 0
-code 2440      # 005C: pop @40
-code B000      # 005D: read_spi 0
-code 2440      # 005E: pop @40
+code BF74      # 0038: read_spi 0
+code 297E      # 0044: drop
+code BF74      # 0038: read_spi 0
+code 297E      # 0044: drop
+code BF74      # 0038: read_spi 0
+code 297E      # 0044: drop
+#code B000      # 004F: read_spi 0
+#code 297E      # 0044: drop
+#code B000      # 0051: read_spi 0
+#code 297E      # 0044: drop
+#code B000      # 0053: read_spi 0
+#code 297E      # 0044: drop
+#code B000      # 0055: read_spi 0
+#code 297E      # 0044: drop
+#code B000      # 0057: read_spi 0
+#code 297E      # 0044: drop
+#code B000      # 0059: read_spi 0
+#code 297E      # 0044: drop
+#code B000      # 005B: read_spi 0
+#code 297E      # 0044: drop
+#code B000      # 005D: read_spi 0
+#code 297E      # 0044: drop
 # CCCC marker
-code 01FF 5E5A # 005F: push 5E5A // (5E5A+C)*2+1000 = FFFE
+code 01FF 65DA # 005F: push 5E5A // (5E5A+C)*2+1000 = FFFE
 code B000      # 0060: read_spi 0
-code 2440      # 0061: pop @40
+code 297E      # 0061: drop
 # dead loop
 code 0000      # 0062: push #0
 code 2440      # 0063: pop @40
 code E7FE      # 0064: jump .-2
 
-mover 6107 7107 08AA 18AA 407A 507A F002 F004 F000
