--- a/data/test.cfg
+++ b/data/test.cfg
@@ -10,52 +10,91 @@ code 0067      # 0025: push #67
 code 0078      # 0026: push #78
 code 0089      # 0027: push #89
 code 009A      # 0028: push #9A
-code 00AB      # 0029: push #AB
+code 00AA      # 0029: push #AA
 code 2D80      # 002A: pop $0
-code 00BC      # 002B: push #BC
+code 00BB      # 002B: push #BB
 code 2D81      # 002C: pop $1
-code 00CD      # 002D: push #CD
+code 00CC      # 002D: push #CC
 code 2D82      # 002E: pop $2
-code 00DE      # 002F: push #DE
+code 00DD      # 002F: push #DD
 code 2D83      # 0030: pop $3
 
+##########################################
 #code under test
-code A800      # 0: set $0, #0
-           #m2:
-code 950F      # 1: cmp $0, #8
-code F017      # 2: rjump_f0 m1
-code A840      # 3: set $1, #0
-           #m3:
-code 951F      # 4: cmp $1, #8
-code F011      # 5: rjump_f0 m4
-# print $0
-code 2D00      # 6: push $0
-code BF74      # 7: 0038: read_spi 0
-code 297E      # 8: drop
-# print $1
-code 2D01      # 9: push $1
-code BF74      # A: read_spi 0
-code 297E      # B: drop
-#test
-code 2D00      # 6: push $0
-code 2B22      # 7: tested code
-# print stack top
-code BF74      # 8: read_spi 0
-code 297E      # 9: drop
-
-# CCCC marker - "line feed"
-code 01FF 65DA # C: push 5E5A // (5E5A+C)*2+1000 = FFFE
-code B000      # E: read_spi 0
-code 297E      # F: drop
-
-code 2EC1      # 10: inc $1
-code 297E      # 11: drop
-code E7EE      # 12: jump m3
-          # m4:
-code 2EC0      # 13: inc $0
-code 297E      # 14: drop
-code E7E8      # 15: jump m2
-          # m1:  16:
+code 0011
+code BF74      # D: read_spi 0
+code 297E      # E: drop
+code 0011      # push #0048
+code 0013      # push #0048
+code 296E      # CUT
+#print result
+code BF74      # D: read_spi 0
+code 297E      # E: drop
+# CCCC marker
+code 01FF 65DA # 005F: push 5E5A // (5E5A+C)*2+1000 = FFFE
+code B000      # 0060: read_spi 0
+code 297E      # 0061: drop
+##########################################
+#code under test
+code 0012
+code BF74      # D: read_spi 0
+code 297E      # E: drop
+code 0012      # push #0048
+code 0013      # push #0048
+code 296E      # CUT
+#print result
+code BF74      # D: read_spi 0
+code 297E      # E: drop
+# CCCC marker
+code 01FF 65DA # 005F: push 5E5A // (5E5A+C)*2+1000 = FFFE
+code B000      # 0060: read_spi 0
+code 297E      # 0061: drop
+##########################################
+#code under test
+code 0013
+code BF74      # D: read_spi 0
+code 297E      # E: drop
+code 0013      # push #0048
+code 0013      # push #0048
+code 296E      # CUT
+#print result
+code BF74      # D: read_spi 0
+code 297E      # E: drop
+# CCCC marker
+code 01FF 65DA # 005F: push 5E5A // (5E5A+C)*2+1000 = FFFE
+code B000      # 0060: read_spi 0
+code 297E      # 0061: drop
+##########################################
+#code under test
+code 0014
+code BF74      # D: read_spi 0
+code 297E      # E: drop
+code 0014      # push #0048
+code 0013      # push #0048
+code 296E      # CUT
+#print result
+code BF74      # D: read_spi 0
+code 297E      # E: drop
+# CCCC marker
+code 01FF 65DA # 005F: push 5E5A // (5E5A+C)*2+1000 = FFFE
+code B000      # 0060: read_spi 0
+code 297E      # 0061: drop
+##########################################
+#code under test
+code 0015
+code BF74      # D: read_spi 0
+code 297E      # E: drop
+code 0015      # push #0048
+code 0013      # push #0048
+code 296E      # CUT
+#print result
+code BF74      # D: read_spi 0
+code 297E      # E: drop
+# CCCC marker
+code 01FF 65DA # 005F: push 5E5A // (5E5A+C)*2+1000 = FFFE
+code B000      # 0060: read_spi 0
+code 297E      # 0061: drop
+##########################################
 
 #dump stack
 # AAAA marker
